# party-streamer

./: .gitignore  README.md  TODO.md  docker-compose.yml
projects/api/: Dockerfile  pyproject.toml
projects/api/server/: __init__.py  app.py  server.py
projects/api/server/routers/: logs.py
projects/ui/: Dockerfile  package-lock.json  package.json
