[project]
name = "api"
version = "0.1.0"
description = "party-streamer api for logs"
authors = [
    {name = "Adam crockett",email = "mr.adam.crockett@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python  = ">=3.13"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.1,<0.35.0"

packages = [
  { include = "api" }
]

[tool.poetry.scripts]
dev = "api:dev"
prod = "api:prod"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
